feat: using json files instead of sqlite because failed writes on sqlite

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 .BGPKWorker
 .vscode
 .*
+example/bin
+example/files
+*.db
+example/pyvenv.cfg
+
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
